assets/css/silktide-consent.css
/*  
   Silktide Consent Manager - `https://silktide.com/consent-manager/`    
  
   Styles are at risked of being overridden by styles coming from the site the consent manager is used on. 
   To help prevent this, global wrapper elements are prefixed with "#silktide-" 
 */ 
  
 /* -------------------------------- 
   Global Styles - These elements exist in the main DOM and styling is limited to positioning and animation 
 -------------------------------- */ 
 /* Wrapper (Global) */ 
 #silktide-wrapper { 
               --focus: 0 0 0 2px #ffffff, 0 0 0 4px #000000, 0 0 0 6px #ffffff; 
               --boxShadow: -5px 5px 10px 0px #00000012, 0px 0px 50px 0px #0000001a; 
               --fontFamily: Helvetica Neue, Segoe UI, Arial, sans-serif; 
               --primaryColor: #3B62E2; 
               --backgroundColor: #FFFFFF; 
               --textColor: #253B48; 
               --backdropBackgroundColor: #00000033; 
               --backdropBackgroundBlur: 0px; 
               --cookieIconColor: #FFFFFF; 
               --cookieIconBackgroundColor: #253B48; 
               position: fixed; 
   bottom: 0; 
   right: 0; 
   width: 100%; 
   height: 100%; 
   z-index: 99999; 
   pointer-events: none; 
   border: 0px; 
   display: flex; 
   justify-content: center; 
   align-items: center 
             } 
  
 /* Backdrop (Global) */ 
 #silktide-backdrop-global { 
   position: fixed; 
   top: 0; 
   left: 0; 
   width: 100%; 
   height: 100%; 
   pointer-events: auto; 
   border: 0px; 
   display: none; 
 } 
  
 /* -------------------------------- 
   Links 
 -------------------------------- */ 
 #silktide-wrapper a { 
   all: unset; 
   display: inline-block; 
   color: var(--primaryColor); 
   text-decoration: underline; 
 } 
  
 #silktide-wrapper a:hover { 
   cursor: pointer; 
   color: var(--textColor); 
 } 
  
 /* -------------------------------- 
   Focus Styles 
 -------------------------------- */ 
 #silktide-wrapper a:focus, 
 #silktide-wrapper #silktide-banner button:focus, 
 #silktide-wrapper #silktide-modal button:focus, 
 #silktide-wrapper #silktide-cookie-icon:focus { 
   outline: none; 
   box-shadow: var(--focus); 
   border-radius: 5px; 
 } 
  
 #silktide-wrapper #silktide-cookie-icon:focus { 
   border-radius: 50%; 
 } 
  
 /* -------------------------------- 
   General Styles 
 -------------------------------- */ 
  
 #silktide-wrapper .st-button { 
   color: var(--backgroundColor); 
   background-color: var(--primaryColor); 
   border: 2px solid var(--primaryColor); 
   padding: 10px 20px; 
   text-decoration: none; 
   text-align: center; 
   display: inline-block; 
   font-size: 16px; 
   line-height: 24px; 
   cursor: pointer; 
   border-radius: 5px; 
 } 
  
 #silktide-wrapper .st-button--primary { 
 } 
  
 #silktide-wrapper .st-button--primary:hover { 
   background-color: var(--backgroundColor); 
   color: var(--primaryColor); 
 } 
  
 #silktide-wrapper .st-button--secondary { 
   background-color: var(--backgroundColor); 
   color: var(--primaryColor); 
 } 
  
 #silktide-wrapper .st-button--secondary:hover { 
   background-color: var(--primaryColor); 
   color: var(--backgroundColor); 
 } 
  
 /* -------------------------------- 
   Banner 
 -------------------------------- */ 
 #silktide-banner { 
   font-family: var(--fontFamily); 
   color: var(--textColor); 
   background-color: var(--backgroundColor); 
   box-sizing: border-box; 
   padding: 32px; 
   border-radius: 5px; 
   pointer-events: auto; 
   border: 0px; 
   position: fixed; 
   bottom: 16px; 
   right: 16px; 
   width: 600px; 
   overflow: auto; 
   max-width: calc(100% - 32px); 
   max-height: calc(100vh - 32px); 
   transform: translate(0, -20px); 
   opacity: 0; 
   animation: silktide-slideInDown 350ms ease-out forwards; 
   animation-delay: 0.3s; 
   box-shadow: -5px 5px 10px 0px #00000012, 0px 0px 50px 0px #0000001a; 
 } 
  
 #silktide-banner:focus { 
   border-radius: 50%; 
 } 
  
 #silktide-banner.center { 
   top: 50%; 
   left: 50%; 
   bottom: auto; 
   right: auto; 
   position: fixed; 
   transform: translate(-50%, calc(-50% - 20px)); 
   animation: silktide-slideInDown-center 350ms ease-out forwards; 
 } 
  
 #silktide-banner.bottomLeft { 
   bottom: 16px; 
   left: 16px; 
   position: fixed; 
 } 
  
 #silktide-banner.bottomCenter { 
   bottom: 16px; 
   left: 50%; 
   position: fixed; 
   transform: translate(-50%, -20px); 
   animation: silktide-slideInDown-bottomCenter 350ms ease-out forwards; 
 } 
  
 #silktide-banner .preferences { 
   display: flex; 
   gap: 5px; 
   border: none; 
   padding: 15px 0px; 
   background-color: transparent; 
   color: var(--primaryColor); 
   cursor: pointer; 
   font-size: 16px; 
 } 
  
 #silktide-banner .preferences span { 
   display: block; 
   white-space: nowrap; 
   text-decoration: underline; 
 } 
  
 #silktide-banner .preferences span:hover { 
   color: var(--textColor); 
 } 
  
 #silktide-banner .preferences:after { 
   display: block; 
   content: '>'; 
   text-decoration: none; 
 } 
  
 #silktide-banner p { 
   font-size: 16px; 
   line-height: 24px; 
   margin: 0px 0px 15px; 
 } 
  
 #silktide-banner a { 
   display: inline-block; 
   color: var(--primaryColor); 
   text-decoration: underline; 
   background-color: var(--backgroundColor); 
 } 
  
 #silktide-banner a:hover { 
   color: var(--textColor); 
 } 
  
 #silktide-banner a.silktide-logo { 
   display: flex; 
   align-items: center; 
   justify-content: center; 
   fill: var(--primaryColor); /* passed down to svg > path */ 
   margin-left: auto; 
   width: 48px; 
   height: 48px; 
 } 
  
  
 #silktide-banner .actions { 
   display: flex; 
   gap: 16px; 
   flex-direction: column; 
   margin-top: 24px; 
 } 
  
 @media (min-width: 600px) { 
   #silktide-banner .actions { 
     flex-direction: row; 
     align-items: center; 
   } 
 } 
/* ... */

